--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             const output = document.getElementById('output');
             const dialog = document.createElement('div');
             dialog.classList.add('dialog');
-            dialog.textContent = `${characters[character].name}: ${message}`;
+            dialog.textContent = `${characters[character]?.name || character}: ${message}`;
             output.appendChild(dialog);
         }
 
