--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         img {
             max-width: 100%;
             height: auto;
+            border-radius: 8px;
+            margin-bottom: 10px;
         }
 
         .dialog-container {
